# vm-pool

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/images/: Cargo.toml
crates/images/src/: lib.rs
crates/pool/: Cargo.toml
crates/pool/src/: lib.rs  snapshot.rs  transport.rs
crates/pool/tests/: integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  main.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: lib.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs  main.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
images/agent/: Dockerfile
images/automation/: Dockerfile
images/base/: Dockerfile
spec/: spec.md
