[package]
name = "vm-pool-events"
description = "Append-only event log with pub/sub and log streaming"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vm-pool-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
