[package]
name = "vm-pool-manager"
description = "VM pool: allocation, limits, health monitoring, lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vm-pool-protocol.workspace = true
vm-pool-transport.workspace = true
vm-pool-images.workspace = true
vm-pool-events.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
