[package]
name = "vm-pool-snapshot"
description = "Save/restore VM state via Virtualization.framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vm-pool-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
