[package]
name = "vm-pool-transport"
description = "Host-side communication with VMs over stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vm-pool-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
